--- a/frontend/styles/instructions.module.scss
+++ b/frontend/styles/instructions.module.scss
@@ -11,9 +11,22 @@
     padding: 0 20px;
     text-align: center;
 
-    h2 {
+    h2, h3 {
       color: $text-light;
+      margin: 0;
+    }
+
+    h3 {
+      font-weight: 100;
       margin-bottom: 40px;
+    }
+
+    .silver {
+      color: silver;
+    }
+
+    .gold {
+      color: gold;
     }
 
     .highscoreWrapper {
