--- a/frontend/styles/instructions.module.scss
+++ b/frontend/styles/instructions.module.scss
@@ -7,6 +7,12 @@
   align-items: center;
   justify-content: center;
 
+  .topLeft {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
+
   .wrapper {
     padding: 0 20px;
     text-align: center;
